fix(UI): Fix tag popover UI being behind the list button

--- a/ui/src/components/Popover/Popover.css
+++ b/ui/src/components/Popover/Popover.css
@@ -6,6 +6,7 @@
         var(--radix-popper-available-width)
     );
     max-height: calc(var(--radix-popper-available-height) - 100px);
+    z-index: 9999;
 }
 
 .popover-close {
